# shackle

./: Cargo.toml
crates/flatzinc-serde/src/: lib.rs
crates/rangelist/: CHANGELOG.md
crates/rangelist/src/: lib.rs
crates/shackle/: Cargo.toml
crates/shackle-cli/src/: main.rs
crates/shackle-compiler/: Cargo.toml
crates/shackle-compiler/src/: file.rs
crates/shackle-compiler/src/hir/: db.rs
crates/shackle-compiler/src/hir/lower/: mod.rs  test.rs
crates/shackle-compiler/src/hir/lower/xcsp3/: item.rs
crates/shackle-compiler/src/syntax/: ast.rs  db.rs  mod.rs  xcsp.rs
crates/shackle-compiler/src/syntax/minizinc/: container.rs  expression.rs  item.rs  mod.rs  pattern.rs  primitive.rs  types.rs
crates/shackle-compiler/src/thir/: db.rs
crates/shackle-compiler/src/thir/ir/: mod.rs
crates/shackle-compiler/src/thir/transform/: comprehension.rs  mod.rs  type_specialise.rs
crates/shackle-compiler/src/ty/: functions.rs
crates/shackle-compiler/src/utils/: refmap.rs
crates/shackle-runtime/: Cargo.toml
crates/shackle-runtime/src/: builtin.rs  value.rs
crates/shackle-runtime/src/value/: bool_var.rs  float_var.rs  int_set_var.rs  int_var.rs  num.rs  seq.rs  set.rs
crates/shackle/src/: lib.rs  value.rs
crates/shackle/src/data/: serde.rs
crates/shackle/src/legacy/: mod.rs
crates/xcsp3-serde/src/: constraint.rs  expression.rs  lib.rs
