[workspace]
members = [
  "crates/flatzinc-serde",
  "crates/shackle",
  "crates/shackle-cli",
  "crates/shackle-compiler",
  "crates/shackle-fmt",
  "crates/shackle-ls",
  "parsers/tree-sitter-datazinc",
  "parsers/tree-sitter-eprime",
  "parsers/tree-sitter-minizinc",
]
resolver = "2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.15.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Additional files to include in the packaging
include = ["share/"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
