[package]
name = "shackle-compiler"
version = "0.1.0"
authors = ["Jip J. Dekker <jip@dekker.one>"]
license = "MPL-2.0"

edition = "2021"

[dependencies]
log = "0.4.18"
miette = "7.0.0"
quick-xml = { version = "0.36.1", features = ["serialize", "overlapped-lists"] }
rustc-hash = "2.0.0"
salsa = { git = "https://github.com/salsa-rs/salsa", rev = "ab9aa3ac0850cf8e4fd32c393d78de99e3e9a50c" }
serde_json = "1.0.96"
stacker = "0.1.15"
thiserror = "1.0.40"
tree-sitter = "0.22.1"
tree-sitter-eprime = { path = "../../parsers/tree-sitter-eprime" }
tree-sitter-minizinc = { path = "../../parsers/tree-sitter-minizinc" }
xcsp3-serde = { path = "../xcsp3-serde" }

[dev-dependencies]
expect-test = "1.4.1"
